--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -3,10 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./build && npx tsc",
+    "start": "npm run build && npx functions-framework --source=build/ --target=myHttpFunction"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@google-cloud/functions-framework": "^3.4.2",
+    "@types/node": "^22.9.0",
+    "pnpm": "^9.12.3",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.3"
+  }
 }
