--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -12,9 +12,12 @@
   "description": "",
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.4.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "jest": "^29.7.0",
     "pnpm": "^9.12.3",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
