--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && npx functions-framework --source=build/ --target=myHttpFunction"
   },
