--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "node-pg-migrate": "^7.8.0",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0"
   }
