--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/functions-framework": "^3.4.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "@types/pg": "^8.11.10",
     "jest": "^29.7.0",
     "pnpm": "^9.12.3",
     "rimraf": "^6.0.1",
