--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest",
     "build": "rimraf ./build && npx tsc",
-    "start": "npm run build && npx functions-framework --source=build/ --target=myHttpFunction"
+    "start": "npm run build && npx functions-framework --source=./build/src/index.js --target=myHttpFunction"
   },
   "keywords": [],
   "author": "",
