--- a/media-borrowing/tsconfig.json
+++ b/media-borrowing/tsconfig.json
@@ -5,12 +5,13 @@
     "lib": ["es6"],                     
     "allowJs": true,
     "outDir": "build",                          
-    "rootDir": ".",
+    "rootDir": "./src",
     "strict": true,         
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-  }
+  },
+  "include":  ["**/*.ts"]
 }
