--- a/media-borrowing/docker-compose.yml
+++ b/media-borrowing/docker-compose.yml
@@ -2,20 +2,23 @@ version: '3.8'
 
 services:
   node-app:
+    container_name: media-borrowing-app
     build: .
     ports:
       - "8080:8080"
     environment:
       - PGUSER=dev \
       - PGPASSWORD=dev \
-      - PGHOST=localhost \
+      - PGHOST=media-borrowing-db \
       - PGPORT=5432 \
       - PGDATABASE=dev-db
+      - DATABASE_URL=postgres://dev:dev@media-borrowing-db:5432/dev-db
     depends_on:
       - postgres  
     command: ${APP_COMMAND:-pnpm start}
 
   postgres:
+    container_name: media-borrowing-db
     image: postgres:13
     volumes:
       - aml-media-borrowing-dev-postgres-data:/var/lib/postgresql/data  
