--- a/media-borrowing/tsconfig.json
+++ b/media-borrowing/tsconfig.json
@@ -13,5 +13,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
   },
-  "include":  ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "exclude": ["**/*.test.ts"]
+
 }
