--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -27,9 +27,11 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "uuid": "^11.0.3"
   }
 }
