--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
+    "crypto": "^1.0.1",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
