--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -9,7 +9,7 @@
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
-    "migrate:create": "node-pg-migrate create"
+    "migrate:create": "node-pg-migrate create -j sql"
   },
   "keywords": [],
   "author": "",
