--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -17,12 +17,18 @@
   "description": "",
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.4.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
     "jest": "^29.7.0",
     "pnpm": "^9.12.3",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
