--- a/media-borrowing/Dockerfile
+++ b/media-borrowing/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:20
 
+RUN apt-get update && apt-get install -y postgresql-client
 RUN npm install pnpm -g
 
 WORKDIR /usr/media-borrowing/src
