--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -9,7 +9,9 @@
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
-    "migrate:create": "node-pg-migrate create -j sql"
+    "migrate:create": "node-pg-migrate create -j sql",
+    "test:unit": "jest --testPathIgnorePatterns='src/app.test.ts'",
+    "test:api": "jest src/app.test.ts"
   },
   "keywords": [],
   "author": "",
