--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -11,7 +11,7 @@
     "migrate:redo": "node-pg-migrate redo",
     "migrate:create": "node-pg-migrate create -j sql",
     "test:unit": "jest --testPathIgnorePatterns='src/app.test.ts'",
-    "test:api": "jest src/app.test.ts"
+    "test:api": "jest --forceExit src/app.test.ts"
   },
   "keywords": [],
   "author": "",
