--- a/member-client/package.json
+++ b/member-client/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
