--- a/member-client/package.json
+++ b/member-client/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^6.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-multi-carousel": "^2.8.5"
+    "react-multi-carousel": "^2.8.5",
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
