--- a/media-search/package.json
+++ b/media-search/package.json
@@ -23,5 +23,8 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@elastic/elasticsearch": "^8.16.2"
   }
 }
