--- a/media-search/Dockerfile
+++ b/media-search/Dockerfile
@@ -2,9 +2,9 @@ FROM node:20
 
 RUN npm install pnpm -g
 
-WORKDIR /usr/media-search/src
+WORKDIR /usr/media-search/
 
-COPY package.json package-lock.json pnpm-lock.yaml ./
+COPY package.json pnpm-lock.yaml ./
 
 RUN pnpm install
 
