--- a/media-search/docker-compose.test.yml
+++ b/media-search/docker-compose.test.yml
@@ -15,10 +15,9 @@ services:
     command: pnpm test:api
 
   elasticsearch:
-    image: elasticsearch:8.8.0
+    image: elasticsearch:8.16.1
     ports:
       - 9200:9200
-    user: "test" 
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -26,7 +25,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl -s http://elasticsearch01:9200 >/dev/null || exit 1"
+          "curl -s http://elasticsearch:9200 >/dev/null || exit 1"
         ]
       interval: 10s
       timeout: 10s
