--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && npx functions-framework --source=./build/index.js --target=mediaBorrowing",
+    "dev": "NODE_ENV=development npm run build && npx functions-framework --source=./build/index.js --target=mediaBorrowing",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@google-cloud/functions-framework": "^3.4.2",
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
@@ -34,8 +36,12 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.4.2",
     "@types/uuid": "^10.0.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.21.1",
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
