--- a/media-search/tsconfig.json
+++ b/media-search/tsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "target": "es2015",                          
     "module": "commonjs",                    
-    "lib": ["es6"],                     
+    "lib": [
+      "es6",
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],                     
     "allowJs": true,
     "outDir": "build",                          
     "rootDir": "./src",
