--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -6,6 +6,7 @@
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && npx functions-framework --source=./build/index.js --target=mediaBorrowing",
     "dev": "NODE_ENV=development npm run build && npx functions-framework --source=./build/index.js --target=mediaBorrowing",
+    "seed:dev": "ts-node dev-seed/mediaBorrowingDevSeed.ts",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
