--- a/media-search/package.json
+++ b/media-search/package.json
@@ -7,6 +7,8 @@
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && npx functions-framework --source=./build/index.js --target=mediaSearch",
     "dev": "NODE_ENV=development npm run build && npx functions-framework --source=./build/index.js --target=mediaSearch",
+    "index:create": "ts-node migrations/create-m_index.ts",
+    "seed:dev": "ts-node dev-seed/mediaSearchDevSeed.ts",
     "test:api": "jest --silent=false --forceExit app.test.ts"
   },
   "keywords": [],
@@ -33,6 +35,7 @@
     "@google-cloud/functions-framework": "^3.4.2",
     "@types/elasticsearch": "^5.0.43",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "ts-node": "^10.9.2"
   }
 }
