--- a/media-search/tsconfig.json
+++ b/media-search/tsconfig.json
@@ -18,5 +18,5 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
   },
-  "include": ["**/*.ts"],
+  "include": ["src/**/*.ts"],
 }
