--- a/media-borrowing/package.json
+++ b/media-borrowing/package.json
@@ -46,6 +46,7 @@
     "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
     "uuid": "^11.0.3"
   }
