--- a/media-borrowing/tsconfig.json
+++ b/media-borrowing/tsconfig.json
@@ -13,6 +13,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
   },
-  "include": ["**/*.ts"],
+  "include": ["src/*.ts"],
 
 }
