auth service documentation

--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "entry-point.js",
   "scripts": {
-    "start": "functions-framework --target=handleAuthRequests"
+    "start": "env-cmd -r ./.env.json functions-framework --target=handleAuthRequests"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
