--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "env-cmd": "^10.1.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1"
   }
 }
