--- a/user-service/package.json
+++ b/user-service/package.json
@@ -16,6 +16,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1"
   }
