--- a/user-service/package.json
+++ b/user-service/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.5",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env-cmd": "^10.1.0",
     "express": "^4.21.2",
+    "jest": "^29.7.0",
+    "jest-mock-req-res": "^1.0.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "supertest": "^7.0.0"
   }
 }
