--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -17,6 +17,10 @@
     "env-cmd": "^10.1.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
